# llm-alignment-system

./: .gitignore  README.md  environment.yaml  pyproject.toml
configs/model/: qwen2_5_7b.yaml
configs/training/: dpo.yaml  dpo_local.yaml  sft_lora.yaml  sft_lora_local.yaml
data/processed/: dpo_validation.jsonl  metadata.json  test.jsonl  validation.jsonl
experiments/baseline_runs/: benchmark_few_shot_2.json  benchmark_zero_shot.json  predictions_few_shot_2.jsonl  predictions_zero_shot.jsonl  results_few_shot_2.jsonl  results_zero_shot.jsonl
experiments/benchmark_results/: benchmark_base.json
metrics/: baseline_metrics.json  benchmark_history.csv
playground/: app.py  requirements.txt
playground/src/: benchmark_data.py  inference.py  model_manager.py
scripts/: benchmark.py  evaluate.py  generate_dataset.py  run_baseline.py  setup_environment.py  train_dpo.py  train_sft.py
src/data/: collator.py  generator.py  preprocessor.py  schemas.py  synthetic_builder.py  tokenizer.py  validators.py
src/evaluation/: baseline_strategies.py  benchmarks.py  comparator.py  hallucination.py  json_validator.py  latency.py  perplexity.py  score_aggregator.py  tool_call_metrics.py
src/llm_alignment_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: __init__.py  architecture_viz.py  loader.py  lora_config.py  memory_estimator.py  parameter_counter.py  quantization.py  tokenizer_loader.py
src/training/: callbacks.py  dpo_trainer.py  optimizer.py  (+3 more)
tests/: test_baseline.py  test_dpo.py  test_evaluation.py  test_models.py  test_schemas.py  test_training.py
(+5 files in other folders)
